<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.amazinganimalsquiz.animals.libreres.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ngLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:srcCompat="@drawable/nglogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/qwizblue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <!--Runing line TextView-->
                    <!--<TextView-->
                    <!--android:id="@+id/question1Txt"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:ellipsize="end"-->
                    <!--android:focusable="true"-->
                    <!--android:focusableInTouchMode="true"-->
                    <!--android:freezesText="true"-->
                    <!--android:marqueeRepeatLimit="marquee_forever"-->
                    <!--android:paddingLeft="16dp"-->
                    <!--android:paddingRight="16dp"-->
                    <!--android:paddingTop="16dp"-->
                    <!--android:scrollHorizontally="true"-->
                    <!--android:singleLine="true"-->
                    <!--android:text="@string/question1Txt"-->
                    <!--android:textColor="@android:color/background_light"-->
                    <!--android:textSize="30sp" />-->
                    <TextView
                        android:id="@+id/question1Txt"
                        style="@style/QuestionsTxt"
                        android:text="@string/question1Txt"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBox1"
                                style="@style/CheckBoxes"
                                android:text="@string/amphibiansQQ"
                                />

                            <CheckBox
                                android:id="@+id/checkBox2"
                                style="@style/CheckBoxes"
                                android:text="@string/fishQQ"
                                />

                            <CheckBox
                                android:id="@+id/checkBox3"
                                style="@style/CheckBoxes"
                                android:text="@string/birdsQQ"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBox4"
                                style="@style/CheckBoxes"
                                android:text="@string/reptilesQQ"
                                />

                            <CheckBox
                                android:id="@+id/checkBox5"
                                style="@style/CheckBoxes"
                                android:text="@string/zverinusQQ"
                                />

                            <CheckBox
                                android:id="@+id/checkBox6"
                                style="@style/CheckBoxes"
                                android:text="@string/insectsQQ"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/question2Txt"
                            style="@style/QuestionsTxt"
                            android:text="@string/question2Txt" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/posondartfrog1" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/salamander1" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/redeyedtreefrog3" />

                    </LinearLayout>

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yesRbtn"
                        style="@style/RadioBtn"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/yesQQ"
                       />

                    <RadioButton
                        android:id="@+id/noRbtn"
                        style="@style/RadioBtn"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/noQQ"
                        />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/question3Txt"
                            style="@style/QuestionsTxt"
                            android:text="@string/question3Txt" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/bear" />

                        <EditText
                            android:id="@+id/bearNameTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/enter_animal_name_QQ"
                            android:inputType="textPersonName"
                            android:selectAllOnFocus="false"
                            android:textAllCaps="true"
                            android:textColor="#FFF59D"
                            android:textColorHint="#FFF59D"
                            android:textSize="24sp"
                            android:theme="@style/MyEditTextTheme" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question4Txt"
                        style="@style/QuestionsTxt"
                        android:text="@string/question4Txt" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/shark" />

                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fishRbtn"
                            style="@style/RadioBtn"
                            android:onClick="onRadioButtonClicked2"
                            android:text="@string/fish2QQ"
                             />

                        <RadioButton
                            android:id="@+id/crocodileRbtn"
                            style="@style/RadioBtn"
                            android:onClick="onRadioButtonClicked2"
                            android:text="@string/crocodile2QQ"
                            />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resultTxt"
                       style="@style/showResultTxt"
                        android:text="@string/sea_your_results_hereQQ"
                      />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/showResultsBtn"
                            style="@style/resultAndTryBtnBtn"
                            android:onClick="onShowResultsClicked"
                            android:text="@string/show_resultsQQ"
                      />

                        <Button
                            android:id="@+id/tryAgainBtn"
                            style="@style/resultAndTryBtnBtn"
                            android:onClick="onTryAgainClicked"
                            android:text="@string/try_againQQ"
                             />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</LinearLayout>
